...
              "data": {
                "destinationsList": {
                  "items": [
                    {
                      "_path": "/content/dam/riyadh/language-masters/en/content-fragments/destinations/bangkok",
                      "slug": "thailand-bangkok",
                      "destinationCity": "Bangkok",
                      "destinationCountry": "Thailand",
                      "backgroundImage": {
                        "_path": "/content/dam/riyadh/assets/card_1_image.jpg",
                        "_dynamicUrl": "/content/dam/riyadh/assets/card_1_image.jpg"
                      }
                    },
                    {
                      "_path": "/content/dam/riyadh/language-masters/en/content-fragments/destinations/manila",
                      "slug": "philippines-manila",
                      "destinationCity": "Manila",
                      "destinationCountry": "Philippines",
                      "backgroundImage": null
                    }
                  ]
                }
              }
...
